# vigil-cd

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: codeql.yml  trivy-scan.yml  vigilcd-ci.yml  vigilcd-image-build.yml
VigilCD/: .env.example  .env.template  Dockerfile  README.md  config.template.yaml  docker-compose.yaml  entrypoint.sh  fix-permissions.sh  init.sh  pyproject.toml  setup-ssh-keys.sh  setup.sh
VigilCD/src/: app.py  config_manager.py  docker_env_validator.py  models.py  secret_manager.py  service.py  state.py  webhook_handler.py
VigilCD/src/config/: config.yaml
VigilCD/tests/: conftest.py  test_app.py  test_config_manager.py  test_docker_env_validator.py  test_models.py  test_service.py  test_state.py
