[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigilcd"
version = "0.3.1"
description = "VigilCD - GitOps Deployment Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.122.0",
    "gitpython>=3.1.45",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

vault = [
    "hvac>=1.1.0",  # HashiCorp Vault Client
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    "**/.git",
    "**/.hg",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.svn",
    "__pypackages__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "D", # (Pydocstyle: Docstring-Konventionen)
    # E- und W-Regeln (Flake8: Style Guide Violations & Warnings)
    "E",
    "W",
    # F-Regeln (Pyflakes: Fehler)
    "F",
    # I-Regeln (isort: Import-Sortierung und -Optimierung)
    "I",
    # B-Regeln (Bugbear: potenziell fehlerhafter Code)
    "B",
    # UP-Regeln (Pyupgrade: Code-Modernisierung, z.B. f-strings verwenden)
    "UP",
    # SIM-Regeln (Simplify: Code-Vereinfachung)
    "SIM",
    # N-Regeln (Numpy-Stil, nützlich, wenn Sie keine spezifische Konvention haben)
    "N",
    # S-Regeln (Bandit: Sicherheitsprobleme, z.B. harte Passwörter)
    "S",
    # PL-Regeln (Pylint-kompatible Regeln, ersetzt Pylint größtenteils)
    "PL",
]

ignore = [
    "E501", # Line too long managed by Ruff formatter
    "D203",  # Konkurriert mit D211
    "D212",  # Konkurriert mit D213
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["src"]
